feat: Directive example

--- a/angular-introduction/src/app/components/person-tab/person-tab.component.html
+++ b/angular-introduction/src/app/components/person-tab/person-tab.component.html
@@ -1,7 +1,8 @@
 <div>
-    <h1>From person table component</h1>
+  <h2>From person table component</h2>
     <table class="table table-bordered w-50">
         <caption>Person Details</caption>
+       
         <tr>
         <!-- <tr>
             <td class="fw-semibold text-end">Last Name</td>
@@ -33,10 +34,10 @@
               <td class="fw-semibold text-end">Email</td>
               <td class="ps-2">{{personInput?.email}}</td>
             </tr>
-            <!-- <tr>
+            <tr>
               <td class="fw-semibold text-end">Address</td>
-              <td class="ps-2">{{personInput?.Address}}</td>
-            </tr> -->
+              <td class="ps-2">{{personInput?.address}}</td>
+            </tr>
           </table>
     </table>
 </div>
