--- a/angular-introduction/src/app/app.component.html
+++ b/angular-introduction/src/app/app.component.html
@@ -8,6 +8,7 @@
   </div>
 </div>
 
+<app-event-bind-example></app-event-bind-example>
 
 <div class="container mt-4">
   <p>Hello <strong>{{ name }}</strong></p>
@@ -24,18 +25,11 @@
       <td class="fw-semibold text-end">Email</td>
       <td class="ps-2">{{person.email}}</td>
     </tr>
+    <!-- <tr>
+      <td class="fw-semibold text-end">Address</td>
+      <td class="ps-2">{{person.address}}</td>
+    </tr> -->
   </table>
-<<<<<<< HEAD
-</div>
-<div class="d-flex gap-5 text-nowrap">
-  <app-person-tab>
-    
-  </app-person-tab>
-</div>
-=======
-   <div class="d-flex gap-5 text-nowrap">
-  <app-person-tab></app-person-tab>
-</div>
 
 <div class="d-flex gap-5 text-nowrap">
   <!-- For input we use [] -->
@@ -43,5 +37,11 @@
   <app-person-tab></app-person-tab>
   <app-person-tab [personInput]="person1"></app-person-tab>
 </div>
+<h4>{{ "@for"}} Directive example </h4>
+<div class="d-flex flex-wrap text-nowrap gap-2">
+  @for (user of users; track user){
+    <app-person-tab [personInput]="user"></app-person-tab>
+  }
 </div>
->>>>>>> 251ea01 (initial commit)
+</div>
+
