--- a/angular-introduction/src/app/app.component.html
+++ b/angular-introduction/src/app/app.component.html
@@ -1,47 +1,20 @@
-<div class="container mt-4">
-  <div class="d-flex gap-5 align-item-center">
-    <h1>Coding  Factory</h1>
-    <h2>Introduction to Angular</h2>
+<div class="container mt-2">
+  <div class="d-flex flex-column gap-2">
+    
+    <nav class="navbar navbar-dark bg-primary justify-content-between">
+      <a class="navbar-brand ms-3" role="button" style="cursor: pointer;">CF7 - Angular Introduction</a>
+    </nav>
+    
+    <div class="d-flex flex-row gap-2">
+      <!-- <div class="d-flex flex-column text-nowrap bg-light p-2">
+        <span role="button" routerLink="component-input-example">Component Input Example</span>
+        <span role="button" routerLink="for-directive-example">{{"@for"}} Directive Example</span>
+        <span role="button" routerLink="event-bind-example">Event Bind Example</span>
+      </div> -->
+      <app-list-group-menu class="text-nowrap w-25"></app-list-group-menu>
+      <span class="flex-grow-1 p-2 text-nowrap w-75">
+      <router-outlet></router-outlet>
+      </span>
+    </div>
   </div>
-  <div class="bg-success p-2 text-light">
-    <h3>Welcome to Angular</h3>
-  </div>
 </div>
-
-<app-event-bind-example></app-event-bind-example>
-
-<div class="container mt-4">
-  <p>Hello <strong>{{ name }}</strong></p>
-  <table class="table table-bordered w-50">
-    <tr>
-      <td class="fw-semibold text-end">Last Name</td>
-      <td class="ps-2">{{person.surName}}</td>
-    </tr>
-    <tr>
-      <td class="fw-semibold text-end">Age</td>
-      <td class="ps-2">{{person.age}}</td>
-    </tr>
-    <tr>
-      <td class="fw-semibold text-end">Email</td>
-      <td class="ps-2">{{person.email}}</td>
-    </tr>
-    <!-- <tr>
-      <td class="fw-semibold text-end">Address</td>
-      <td class="ps-2">{{person.address}}</td>
-    </tr> -->
-  </table>
-
-<div class="d-flex gap-5 text-nowrap">
-  <!-- For input we use [] -->
-  <app-person-tab [personInput]="person0"></app-person-tab>
-  <app-person-tab></app-person-tab>
-  <app-person-tab [personInput]="person1"></app-person-tab>
-</div>
-<h4>{{ "@for"}} Directive example </h4>
-<div class="d-flex flex-wrap text-nowrap gap-2">
-  @for (user of users; track user){
-    <app-person-tab [personInput]="user"></app-person-tab>
-  }
-</div>
-</div>
-
