--- a/angular-introduction/src/app/components/person-tab/person-tab.component.html
+++ b/angular-introduction/src/app/components/person-tab/person-tab.component.html
@@ -1,8 +1,7 @@
 <div>
-  <h2>From person table component</h2>
+  <!-- <h2>From person table component</h2> -->
     <table class="table table-bordered w-50">
         <caption>Person Details</caption>
-       
         <tr>
         <!-- <tr>
             <td class="fw-semibold text-end">Last Name</td>
