--- a/angular-introduction/src/app/components/person-tab/person-tab.component.html
+++ b/angular-introduction/src/app/components/person-tab/person-tab.component.html
@@ -1,3 +1,6 @@
+@if(!personInput){
+<div class="alert alert-danger text-center">No Person Details</div>
+}@else {
 <div>
   <!-- <h2>From person table component</h2> -->
     <table class="table table-bordered w-50">
@@ -19,19 +22,19 @@
           <table class="table table-bordered w-50">
             <tr>
               <td class="fw-semibold text-end">First Name</td>
-              <td class="ps-2">{{personInput?.givenName}}</td>
+              <td class="ps-2">{{personInput!.givenName}}</td>
             </tr>
             <tr>
               <td class="fw-semibold text-end">Last Name</td>
-              <td class="ps-2">{{personInput?.surName}}</td>
+              <td class="ps-2">{{personInput!.surName}}</td>
             </tr>
             <tr>
               <td class="fw-semibold text-end">Age</td>
-              <td class="ps-2">{{personInput?.age}}</td>
+              <td class="ps-2">{{personInput!.age}}</td>
             </tr>
             <tr>
               <td class="fw-semibold text-end">Email</td>
-              <td class="ps-2">{{personInput?.email}}</td>
+              <td class="ps-2">{{personInput!.email}}</td>
             </tr>
             @if(isPerson()){
               <tr>
@@ -48,3 +51,4 @@
            </table> 
     </table>
 </div>
+}
